Started GUI, refactored main
main is no longer in tokenizer.cpp, but in its own new main.cpp file

moved the tokenizer declarations to tokenizer.h

the new GUI compiles just about everything inside it because it will need the parser and data model to load documents. Will probably need to do some preprocessor voodoo to use a different 'File' class, but let's keep it like this for now until/if we get so far :-D

onwards and upwards

--- a/Makefile.gcc
+++ b/Makefile.gcc
@@ -14,12 +14,12 @@ endif
 
 CXXFLAGS = $(CFLAGS) --std=gnu++14
 
-OBJS = parser.o tokenizer.o file.o render.o wave.o stereo.o
+OBJS = main.o parser.o tokenizer.o file.o render.o wave.o stereo.o
 
 jakbeat: $(OBJS)
 	$(LD) $(LDOPTS) $(OBJS) $(LIBS)
 
-tokenizer.cpp: parser.h
+main.cpp tokenizer.cpp: parser.h
 
 parser.h: parser.cpp
 
