--- a/gui/Makefile
+++ b/gui/Makefile
@@ -1,7 +1,9 @@
 VERSION = 1
 
+JAKBEAT-DEPS = parser.cpp ../tokenizer.cpp ../file.cpp ../stereo.cpp 
+
 jakbeat-gui: gui.cpp parser.cpp
-	g++ -o jakbeat-gui -DVERSION=$(VERSION) -g -I. -I.. `fltk-config --cxxflags` gui.cpp parser.cpp ../tokenizer.cpp ../file.cpp ../stereo.cpp `fltk-config --libs`
+	g++ --std=gnu++14 -o jakbeat-gui -DVERSION=$(VERSION) -g -I. -I.. `fltk-config --cxxflags` gui.cpp $(JAKBEAT-DEPS) `fltk-config --libs`
 
 parser.cpp: parser.y ../vendor/lemon/lemon
 	../vendor/lemon/lemon parser.y
