broke off jakbeat-model dependency
(to be replaced with GUI model)

--- a/gui/Makefile
+++ b/gui/Makefile
@@ -1,9 +1,10 @@
 VERSION = 1
 
-JAKBEAT-DEPS = parser.cpp ../tokenizer.cpp ../file.cpp ../stereo.cpp 
+JAKBEAT-DEPS = parser.cpp ../tokenizer.cpp ../stereo.cpp 
+SOURCES = gui.cpp file.cpp
 
 jakbeat-gui: gui.cpp parser.cpp
-	g++ --std=gnu++14 -o jakbeat-gui -DVERSION=$(VERSION) -g -I. -I.. `fltk-config --cxxflags` gui.cpp $(JAKBEAT-DEPS) `fltk-config --libs`
+	g++ --std=gnu++14 -o jakbeat-gui -DVERSION=$(VERSION) -g -I. -I.. `fltk-config --cxxflags` $(SOURCES) $(JAKBEAT-DEPS) `fltk-config --libs`
 
 parser.cpp: parser.y ../vendor/lemon/lemon
 	../vendor/lemon/lemon parser.y
