--- a/gui/Makefile
+++ b/gui/Makefile
@@ -2,8 +2,9 @@ VERSION = 1
 
 JAKBEAT-DEPS = parser.cpp ../tokenizer.cpp
 SOURCES = gui.cpp file.cpp window.cpp window_callbacks.cpp
+HEADERS = $(shell echo *.h)
 
-jakbeat-gui: $(SOURCES) $(JAKBEAT-DEPS)
+jakbeat-gui: $(SOURCES) $(JAKBEAT-DEPS) $(HEADERS)
 	g++ --std=gnu++14 -o jakbeat-gui -DVERSION=$(VERSION) -g -I. -I.. `fltk-config --cxxflags` $(SOURCES) $(JAKBEAT-DEPS) `fltk-config --ldflags`
 
 parser.cpp: parser.y ../vendor/lemon/lemon
