--- a/gui/Makefile
+++ b/gui/Makefile
@@ -1,12 +1,21 @@
 VERSION = 1
 
-JAKBEAT-DEPS = parser.cpp ../tokenizer.cpp
-SOURCES = gui.cpp file.cpp window.cpp window_callbacks.cpp
-OBJS = gui.o file.o window.o window_callbacks.o parser.o tokenizer.o
+CC = gcc
+CFLAGS = -o
+
+CXX = g++
+CXXFLAGS = --std=gnu++14 -c -DVERSION=$(VERSION) -g -I. -I.. `fltk-config --cxxflags` -o
+
+LD = g++ -o
+LDFLAGS = `fltk-config --ldflags`
+
+JAKBEATDEPENDS = parser.o tokenizer.o
+MYOBJS = gui.o file.o window.o window_callbacks.o
+OBJS = $(MYOBJS) $(JAKBEATDEPENDS)
 HEADERS = $(shell echo *.h)
 
 jakbeat-gui: $(OBJS) $(HEADERS)
-	g++ -o jakbeat-gui $(OBJS) `fltk-config --ldflags`
+	$(LD) $@ $(OBJS) $(LDFLAGS)
 
 parser.cpp: parser.y ../vendor/lemon/lemon
 	../vendor/lemon/lemon parser.y
@@ -15,14 +24,14 @@ parser.cpp: parser.y ../vendor/lemon/lemon
 parser.y: ../parser.y
 	install -m 444 ../parser.y parser.y 
 
-tokenizer.cpp: ../tokenizer.cpp
-	install -m 444 ../tokenizer.cpp tokenizer.cpp
-
 %.o: %.cpp
-	g++ --std=gnu++14 -c -o $@ -DVERSION=$(VERSION) -g -I. -I.. `fltk-config --cxxflags` $<
+	$(CXX) $(CXXFLAGS) $@ $<
+
+%.o: ../%.cpp
+	$(CXX) $(CXXFLAGS) $@ $<
 
 ../vendor/lemon/lemon: ../vendor/lemon/lemon.c ../vendor/lemon/lempar.c
-	gcc -o ../vendor/lemon/lemon ../vendor/lemon/lemon.c
+	$(CC) $(CFLAGS) ../vendor/lemon/lemon ../vendor/lemon/lemon.c
 
 clean:
-	rm -f parser.cpp jakbeat-gui parser.y parser.h parser.out *.o tokenizer.cpp
+	rm -f parser.cpp jakbeat-gui parser.y parser.h parser.out *.o tokenizer.cpp ../vendor/lemon/lemon
