Implement split rendering mode and string fixes
* Implement -W option to write one file per drum track
* fix string_utils where I had misread the winapi documentation:
  `\0` is NOT written automatically, resulting in random crashes
  (oddly enough, it seemed to be working up to now)
* bumped version

--- a/Makefile.gcc
+++ b/Makefile.gcc
@@ -6,7 +6,7 @@ LDOPTS = -o jakbeat
 LIBS = -lSDL2
 
 ifeq ($(JAKBEAT_OPTS),debug)
-CFLAGS = -O0 -c -g -msse4 -I. -I/usr/include/SDL2 -Wno-multichar
+CFLAGS = -O0 -c -g -msse4 -I. -I/usr/include/SDL2 -Wno-multichar -DJAKDEBUG=1
 else
 CFLAGS = -O2 -c -msse4 -I. -I/usr/include/SDL2 -Wno-multichar
 endif
